--- a/package.json
+++ b/package.json
@@ -16,25 +16,16 @@
   "dependencies": {
     "koa": "^2.11.0",
     "koa-mount": "^4.0.0",
-    "koa-proxy": "^1.0.0-alpha.3",
     "koa-pug": "^4.0.3",
     "koa-router": "^8.0.8",
-    "koa-static": "^5.0.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "koa-static": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.4.2",
-    "nodemon": "^2.0.2",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "nodemon": "^2.0.2"
   }
 }
