--- a/.drone.yml
+++ b/.drone.yml
@@ -10,4 +10,4 @@ steps:
       from_secret: docker_username
     password:
       from_secret: docker_password
-    repo: thatsourjake/90Bingo
+    repo: thatsourjake/bingo
