Docker image name change

--- a/.drone.yml
+++ b/.drone.yml
@@ -10,4 +10,4 @@ steps:
       from_secret: docker_username
     password:
       from_secret: docker_password
-    repo: thatsourjake/bingo
+    repo: thatsourjake/bingo_card
