--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "koa-mount": "^4.0.0",
     "koa-pug": "^4.0.3",
     "koa-router": "^8.0.8",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "nanoid": "^3.1.20",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
+    "@babel/cli": "^7.12.10",
     "@babel/core": "^7.8.7",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
