--- a/package.json
+++ b/package.json
@@ -14,20 +14,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/ecs-winston-format": "^1.1.0",
     "koa": "^2.11.0",
     "koa-mount": "^4.0.0",
-    "koa-pug": "^4.0.3",
+    "koa-pug": "^5.0.0",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
     "nanoid": "^3.1.20",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.8.7",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "babel-loader": "^8.0.6",
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.5",
+    "@babel/node": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "babel-loader": "^8.2.2",
     "nodemon": "^2.0.2"
   }
 }
