--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.14.5",
     "@elastic/ecs-winston-format": "^1.1.0",
     "koa": "^2.11.0",
     "koa-mount": "^4.0.0",
